@@ -1,52 +1,56 @@
-.m0    { margin: 0;        }
-.m0125 { margin: 0.125rem; }
-.m025  { margin: 0.25rem;  }
-.m05   { margin: 0.50rem;  }
-.m075  { margin: 0.75rem;  }
-.m1    { margin: 1.00rem;  }
-.m125  { margin: 1.25rem;  }
-.m15   { margin: 1.50rem;  }
-.m175  { margin: 1.75rem;  }
-.m2    { margin: 2.00rem;  }
-.m25   { margin: 2.50rem;  }
-.m3    { margin: 3.00rem;  }
-.m4    { margin: 4.00rem;  }
-.ma    { margin: auto;     }
+.m0     { margin: 0;        }
+.m0125  { margin: 0.125rem; }
+.m025   { margin: 0.25rem;  }
+.m05    { margin: 0.50rem;  }
+.m075   { margin: 0.75rem;  }
+.m1     { margin: 1.00rem;  }
+.m125   { margin: 1.25rem;  }
+.m15    { margin: 1.50rem;  }
+.m175   { margin: 1.75rem;  }
+.m2     { margin: 2.00rem;  }
+.m25    { margin: 2.50rem;  }
+.m3     { margin: 3.00rem;  }
+.m4     { margin: 4.00rem;  }
+.ma     { margin: auto;     }
 
-.mx0   { margin-left: 0;       margin-right: 0;       }
-.mx025 { margin-left: 0.25rem; margin-right: 0.25rem; }
-.mx05  { margin-left: 0.50rem; margin-right: 0.50rem; }
-.mx1   { margin-left: 1.00rem; margin-right: 1.00rem; }
-.mx2   { margin-left: 2.00rem; margin-right: 2.00rem; }
-.mx    { margin-left: auto;    margin-right: auto;    }
+.mx0    { margin-left: 0;        margin-right: 0;        }
+.mx0125 { margin-left: 0.125rem; margin-right: 0.125rem; }
+.mx025  { margin-left: 0.25rem;  margin-right: 0.25rem;  }
+.mx05   { margin-left: 0.50rem;  margin-right: 0.50rem;  }
+.mx075  { margin-left: 0.75rem;  margin-right: 0.75rem;  }
+.mx1    { margin-left: 1.00rem;  margin-right: 1.00rem;  }
+.mx2    { margin-left: 2.00rem;  margin-right: 2.00rem;  }
+.mx     { margin-left: auto;     margin-right: auto;     }
 
-.my0   { margin-top: 0;       margin-bottom: 0;       }
-.my025 { margin-top: 0.25rem; margin-bottom: 0.25rem; }
-.my05  { margin-top: 0.50rem; margin-bottom: 0.50rem; }
-.my1   { margin-top: 1.00rem; margin-bottom: 1.00rem; }
-.my2   { margin-top: 2.00rem; margin-bottom: 2.00rem; }
-.my    { margin-top: auto;    margin-bottom: auto;    }
+.my0    { margin-top: 0;        margin-bottom: 0;        }
+.my0125 { margin-top: 0.125rem; margin-bottom: 0.125rem; }
+.my025  { margin-top: 0.25rem;  margin-bottom: 0.25rem;  }
+.my05   { margin-top: 0.50rem;  margin-bottom: 0.50rem;  }
+.my075  { margin-top: 0.75rem;  margin-bottom: 0.75rem;  }
+.my1    { margin-top: 1.00rem;  margin-bottom: 1.00rem;  }
+.my2    { margin-top: 2.00rem;  margin-bottom: 2.00rem;  }
+.my     { margin-top: auto;     margin-bottom: auto;     }
 
-.mt025 { margin-top: 0.25rem; }
-.mt05  { margin-top: 0.50rem; }
-.mt1   { margin-top: 1.00rem; }
-.mt2   { margin-top: 2.00rem; }
-.mt    { margin-top: auto;    }
+.mt025  { margin-top: 0.25rem; }
+.mt05   { margin-top: 0.50rem; }
+.mt1    { margin-top: 1.00rem; }
+.mt2    { margin-top: 2.00rem; }
+.mt     { margin-top: auto;    }
 
-.mb025 { margin-bottom: 0.25rem; }
-.mb05  { margin-bottom: 0.50rem; }
-.mb1   { margin-bottom: 1.00rem; }
-.mb2   { margin-bottom: 2.00rem; }
-.mb    { margin-bottom: auto;    }
+.mb025  { margin-bottom: 0.25rem; }
+.mb05   { margin-bottom: 0.50rem; }
+.mb1    { margin-bottom: 1.00rem; }
+.mb2    { margin-bottom: 2.00rem; }
+.mb     { margin-bottom: auto;    }
 
-.ml025 { margin-left: 0.25rem; }
-.ml05  { margin-left: 0.50rem; }
-.ml1   { margin-left: 1.00rem; }
-.ml2   { margin-left: 2.00rem; }
-.ml    { margin-left: auto;    }
+.ml025  { margin-left: 0.25rem; }
+.ml05   { margin-left: 0.50rem; }
+.ml1    { margin-left: 1.00rem; }
+.ml2    { margin-left: 2.00rem; }
+.ml     { margin-left: auto;    }
 
-.mr025 { margin-right: 0.25rem; }
-.mr05  { margin-right: 0.50rem; }
-.mr1   { margin-right: 1.00rem; }
-.mr2   { margin-right: 2.00rem; }
-.mr    { margin-right: auto;    }
+.mr025  { margin-right: 0.25rem; }
+.mr05   { margin-right: 0.50rem; }
+.mr1    { margin-right: 1.00rem; }
+.mr2    { margin-right: 2.00rem; }
+.mr     { margin-right: auto;    }
