@@ -5,6 +5,7 @@
   * (visibility) opacity steps by 5
   * (border) add border-width
   * (outline) outline outline-offset
+  * (margin) more margins
   * (variables) drop --default-* properties
 
 # 0.24.0 (2023-03-10)
